fix(VBtn): no letter-spacing for RTL locales
we cannot filter exact languages that rely on joining
this is cost-effective compromise

fixes #19627

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -30,6 +30,8 @@
     flex-shrink: 0
 
     .v-locale--is-rtl &
+      letter-spacing: 0
+
       @if meta.type-of($button-text-letter-spacing) == 'number'
         text-indent: -1 * $button-text-letter-spacing
 
